crates/dlmm/tests/snapshots/corpus__pre-2022-serum-order-tx-1.snap
---
source: crates/dlmm/tests/corpus.rs
expression: rendering(&tx)
---
Ok(
    TxActivity {
        lifecycle: [],
        movements: [],
        reward_claims: [],
        pool_swaps: [],
        has_unknown_program_activity: false,
    },
)
